--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "@walletconnect/web3-provider": "^1.7.1",
     "@web3auth/web3auth": "^0.3.0",
     "big-number": "^2.0.0",
